--verbose-includes option to show what files are actually included

--- a/changes.txt
+++ b/changes.txt
@@ -61,6 +61,7 @@
   by Kumar Gala.
 - forall and exists for quantifying over the success of matching depends on
   constraints.
+- --verbose-includes option to show what files are actually included
 ** Bugfix:
 - Improved detection of metavariables in strings.  Problem reported by
   Wolfram Sang.
