--- a/docs/manual/spatch_options.tex
+++ b/docs/manual/spatch_options.tex
@@ -304,6 +304,9 @@ which score file to compare with in the testall run}
   information about attempts to accommodate such errors.  This implicitly
   sets {\bf -{}-parse-error-msg.}}
 
+\rare{-{}-verbose-includes}{Show on standard error which files are actually
+included.}
+
 \rare{-{}-parse-handler $\langle$file$\rangle$}{Loads the file containing
   the OCaml code in charge of parse error reporting.  This function should
   have arguments 1) the line number containing the error, 2) the sequence
