--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -294,7 +294,8 @@ An identifier list is only used for the parameter list of a macro.  It is
 possible to specify its length.
 
 It is possible to specify some information about the definition of a fresh
-identifier.  See the wiki.
+identifier.  Examples are found in demos/plusplus1.cocci and
+demos/plusplus2.cocci %See the wiki.
 
 A symbol declaration specifies that the provided identifiers should be
 considered C identifiers when encountered in the body of the rule.
