doc, tests, etc for attribute matching in variable declarations

--- a/changes.txt
+++ b/changes.txt
@@ -51,7 +51,10 @@
   Kumar Gala. See tests/bitfield_matching.cocci
 - Bit-field matching, see tests/bitfield.cocci
 - Anonymous field matching, see tests/anonfield.cocci
-- current_element position information in position structure (ocaml & python)
+- current_element position information in position structure (ocaml &
+  python)
+- matching and transformation of a single attribute after a variable name
+  in a variable declaration.
 ** Features:
 - Better error reporting for unparsable terms when using make_expr etc in
   script code.  Problem reported by Markus Elfring.
