--- a/changes.txt
+++ b/changes.txt
@@ -55,6 +55,7 @@
   python)
 - matching and transformation of a single attribute after a variable name
   in a variable declaration.
+- add conjunctions on types.
 ** Features:
 - Better error reporting for unparsable terms when using make_expr etc in
   script code.  Problem reported by Markus Elfring.
