more control over K&R parsing
A prototype such as static void authenticate_timeout(u_long); can be
interpreted as having a single parameter named u_long, rather than
having a single parameter of type u_long.

The default is now that if a non-KR parameter has been seen in the
current file, then all subsequent parameters are considered to be
non-KR, and u_long will be classified as a typedef.

--force-kr prevents this change of state; the possibility that a
parameter is a K&R parameter is always considered.

--prevent-kr causes all parameters to be considered non-K&R.  It is
needed when a typedef is never used with a variable name before its
first use in a parameter list.

--- a/docs/manual/spatch_options.tex
+++ b/docs/manual/spatch_options.tex
@@ -463,6 +463,14 @@ other \#ifdef.}
 \rare{-{}-ibm}{Make a effort to parse IBM C code.  Currently decimal
   declarations are supported.}
 
+\rare{-{}-force-kr, -{}-prevent-kr}{These options affect whether an
+  identifier alone in a parameter list can be considered to be a possible
+  K&R parameter or a typedef.  The default is that as soon as a non-K&R
+  parameter is detected, ie a type alone or a type and an identifier,
+  then no identifier is promoted to a K&R parameter.  If {\bf -{}-force-kr}
+  is used, such promotion is still allowed to happen.  If {\bf
+    -{}-prevent-kr} is used, such promotion neer happens.}
+
 \section{Application of the semantic patch to the C code}
 
 \subsection{Feedback at the rule level during the application of the
