--- a/docs/manual/spatch_options.tex
+++ b/docs/manual/spatch_options.tex
@@ -469,7 +469,7 @@ other \#ifdef.}
   parameter is detected, ie a type alone or a type and an identifier,
   then no identifier is promoted to a K&R parameter.  If {\bf -{}-force-kr}
   is used, such promotion is still allowed to happen.  If {\bf
-    -{}-prevent-kr} is used, such promotion neer happens.}
+    -{}-prevent-kr} is used, such promotion never happens.}
 
 \section{Application of the semantic patch to the C code}
 
