--- a/changes.txt
+++ b/changes.txt
@@ -71,6 +71,8 @@
 - Pick up header files that have the same name as the desired one if they
   are unique in the provided include paths.
 - Caching of parsed header files, --no-include-cache to disable.
+- --force-kr and --prevent-kr options to control whether K&R parsing is
+  considered.
 ** Bugfix:
 - Improved detection of metavariables in strings.  Problem reported by
   Wolfram Sang.
