remove no longer accurate constraint on attributes

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -305,9 +305,8 @@ metavariable.  It will be considered to be a metavariable in such rules,
 and will revert to being a symbol in subsequent rules.  These conditions
 also apply to iterator names and declarer names.
 
-An attribute declaration indicates a name that should be considered to be
-an attribute.  It is not possible to match or remove an attribute, only to
-add one.
+An attribute name declaration indicates a name that should be considered to
+be an attribute.
 
 A position metavariable is used by attaching it using \texttt{@} to any
 token, including another metavariable.  Its value is the position (file,
