--- a/docs/manual/spatch_options.tex
+++ b/docs/manual/spatch_options.tex
@@ -465,9 +465,9 @@ other \#ifdef.}
 
 \rare{-{}-force-kr, -{}-prevent-kr}{These options affect whether an
   identifier alone in a parameter list can be considered to be a possible
-  K&R parameter or a typedef.  The default is that as soon as a non-K&R
+  K\&R parameter or a typedef.  The default is that as soon as a non-K\&R
   parameter is detected, ie a type alone or a type and an identifier,
-  then no identifier is promoted to a K&R parameter.  If {\bf -{}-force-kr}
+  then no identifier is promoted to a K\&R parameter.  If {\bf -{}-force-kr}
   is used, such promotion is still allowed to happen.  If {\bf
     -{}-prevent-kr} is used, such promotion never happens.}
 
