final step for allowing references to metavariables from the current rule in script constraints
Such metavariables must be declared previously in the same rule.  They
must all occur within the same rule_elem as the constrained variable.
This rule_elem must contain no disjunctions, after disjunction lifting.

Script constraints may be executed more than once for a given metavariable
binding.  Executing the script constraint does not guarantee that the
complete match will work out; the constraints are executed within the
matching process.

--- a/changes.txt
+++ b/changes.txt
@@ -73,6 +73,11 @@
 - Caching of parsed header files, --no-include-cache to disable.
 - --force-kr and --prevent-kr options to control whether K&R parsing is
   considered.
+- Generalization of script constraints to allow reference to metavariables
+  defined in the same rule, only when the constrained metavariable always
+  occurs in rule_elems that also mention any othe local metavariables
+  mentioned in the script constraint.  Referenced local variables must be
+  declared before the constrained one.
 ** Bugfix:
 - Improved detection of metavariables in strings.  Problem reported by
   Wolfram Sang.
