--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -468,7 +468,7 @@ the fact that it passes through the Coccinelle semantic patch lexer, before
 being converted back to a string to be passed to the scripting language
 interpreter.  It is thus best to avoid complicated code in the constraint
 itself, and instead to define relevant functions in and {\tt initialize}
-rule.  The code must represent an expression must have type bool in the
+rule.  The code must represent an expression that has type bool in the
 scripting language.  The script code can be parameterized by any inherited
 metavariables.  It is implicitly parameterized by the metavariable being
 declared.  In the script, the inherited metavariable parameters are
