--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -677,6 +677,8 @@ foo()
 \end{tabular}
 \end{center}
 
+Note that the region matched by ``...'' can be empty.
+
 \subsection{Dot variants}
 There are two possible modifiers to the control flow for ellipses, one
 (<... ...>) indicates that matching the pattern in between the ellipses is
