--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -168,7 +168,7 @@ code-matching rules.  Script rules are not applied to any code in
 particular, and thus it doesn't make sense to check on the file being
 considered.
 
-As metavariables are bound an inherited across rules, a tree of
+As metavariables are bound and inherited across rules, a tree of
 environments is built up.  A rule is processed only once for all of the
 branches that have the same metavariable bindings for the set of variables
 that the rule depends on.  Different branches, however, may be derived from
