--- a/changes.txt
+++ b/changes.txt
@@ -56,6 +56,7 @@
 - matching and transformation of a single attribute after a variable name
   in a variable declaration.
 - add conjunctions on types.
+- make addition of __attribute__((...)) on function definitions work
 ** Features:
 - Better error reporting for unparsable terms when using make_expr etc in
   script code.  Problem reported by Markus Elfring.
