--- a/changes.txt
+++ b/changes.txt
@@ -91,6 +91,8 @@
   executable is).
 - Improve SmPL parsing of added __attribute__.  Problem repported by
   Eduardo Habkost.
+- In python scripts, virtuals should not overwrite locals with the same
+  name.  Problem reported by Bhumika Goyal.
 * 1.0.6
 ** Language:
 - Allow \ in #define in semantic patch rules, to allow body with multiple
