--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -1283,6 +1283,10 @@ explained in this section.
   \CASE{size\_t} \CASE{ssize\_t} \CASE{ptrdiff\_t}
   \CASE{enum \NT{id} \{ \NT{PARAMSEQ}\mth{(}\NT{dot\_expr}, \NT{exp\_whencode}\mth{)} \OPT{,} \}}
   \CASE{\OPT{struct\OR union} \T{id} \OPT{\{ \any{\NT{struct\_decl\_list}} \}}}
+  \CASE{typeof ( \NT{exp} )}
+  \CASE{typeof ( \NT{ctype} )}
+
+
 
   \RULE{\rt{ctype\_qualif}}
   \CASE{unsigned}
