--- a/changes.txt
+++ b/changes.txt
@@ -57,6 +57,7 @@
   in a variable declaration.
 - add conjunctions on types.
 - make addition of __attribute__((...)) on function definitions work
+- add typeof to the semantic patch language
 ** Features:
 - Better error reporting for unparsable terms when using make_expr etc in
   script code.  Problem reported by Markus Elfring.
