allow some changes in function pointer typedefs

--- a/changes.txt
+++ b/changes.txt
@@ -59,6 +59,7 @@
 - make addition of __attribute__((...)) on function definitions work
 - add typeof to the semantic patch language
 - require "name" when declaring attribute names.
+- Support some changes on function pointer typedefs.
 ** Features:
 - Better error reporting for unparsable terms when using make_expr etc in
   script code.  Problem reported by Markus Elfring.
