a few typo fixes and formatting suggestions
A few typo fixes and formatting suggestions. For revision 75de16b.

Signed-off-by: Michele Martone <michelemartone@users.sf.net>

--- a/docs/manual/spatch_options.tex
+++ b/docs/manual/spatch_options.tex
@@ -548,7 +548,7 @@ version of {\bf -{}-partial-match}.}
 \normal{-D variable=value}{Run the patch considering that the virtual
   identifier metavariable ``variable'' is bound to ``value''.  Any
   identifier metavariable can be designated as being virtual by giving it
-  the rule name {\tt virtual}.  An example is in demos/vm.coci}
+  the rule name {\tt virtual}.  An example is in {\tt demos/vm.cocci}}
 
 \rare{-{}-allow-inconsistent-paths}{Normally, a term that is transformed
   should only be accessible from other terms that are matched by the
